# mlir-toy

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  example1.mlir  example2.mlir  fa_triton.py  flash_attention_htile.mlir  hello-mlir.cpp  mlir_generic_parser.py  pyproject.toml  tilelang-prev-discussion.md  translate_common.py  translate_to_triton.py
docs/: attention-l0-to-l1-transform-plan.md  attention-upward-fusion-design.md  rolling-update-design.md  tile-ir-level1.md  upward-fusion-design.md
experiments/python-solver-embed/: CMakeLists.txt  main.cpp
include/HTile/: HTileAttrs.h  HTileAttrs.td  HTileDialect.h  HTileDialect.td  HTileOps.h  HTileOps.td  HTilePasses.h
include/LinalgExt/: LinalgExtTransform.h  LinalgExtTransformOps.h  LinalgExtTransformOps.td  Utils.h
include/LoopTr/: LoopTransform.h  LoopTransformOps.h  LoopTransformOps.td  Utils.h
include/Toy/: ToyDialect.h  ToyDialect.td  ToyOps.h  ToyOps.td
lib/HTile/: HTileDialect.cpp  HTilePasses.cpp
lib/LinalgExt/: FusionTransformOps.cpp  LinalgExtPlugin.cpp  LinalgExtTransformOps.cpp  RollingUpdateTransformOps.cpp
lib/LoopTr/: FusionTransformOps.cpp  LoopTransformPlugin.cpp  PatternTransformOps.cpp  RollingUpdateTransformOps.cpp  Utils.cpp
python/neptune/: translate_common.py  translate_to_cutile.py  translate_to_tilelang.py  translate_to_triton.py
src/neptune_mlir/: __init__.py  plugin.py  rolling_solver.py
src/neptune_mlir/translators/: __init__.py  common.py  cutile.py  tilelang.py  triton.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/LinalgExt/: clone_fuse_elemwise.mlir  clone_fuse_elemwise_broadcast.mlir  force_fuse_elemwise_chain_into_loop.mlir  fuse_reduction_consumer_into_forall.mlir  rolling_update_force_fuse_elemwise.mlir  rolling_update_force_fuse_elemwise_broadcast.mlir  rolling_update_fwd_frontier.mlir  rolling_update_next_reduction.mlir
test/LinalgExt/Inputs/: clone_fuse_elemwise_broadcast.transform.mlir  force_fuse_elemwise_chain_into_loop.transform.mlir  fuse_reduction_consumer_into_forall.transform.mlir  rolling_update_force_fuse_elemwise_broadcast.transform.mlir  rolling_update_fwd_frontier.transform.mlir  rolling_update_next_reduction.transform.mlir
test/Loop/: apply_patterns_tensor_subset_canonicalization.mlir  clone_fuse_elemwise.mlir  clone_fuse_elemwise_basic.mlir  clone_fuse_elemwise_broadcast.mlir  clone_fuse_elemwise_reduction_state.mlir  clone_fuse_elemwise_two_chain.mlir  clone_fuse_elemwise_two_parallel.mlir  fuse_into_producer_op.mlir  fuse_reduction_consumer_into_forall.mlir  rolling_update_next_reduction.mlir
test/python/: test_translators.py
test/python/data/: attention_l0.mlir  attention_l0_to_l1.transform.mlir  flash_attention_l1.mlir
test/python/golden/: flash_attention_cutile.py  flash_attention_triton.py
tests/: lit.cfg.py  test_translators.py
tests/data/: attention_l0_to_l1.transform.mlir  flash_attention_htile.mlir
tests/golden/: flash_attention_tilelang.py  flash_attention_triton.py
