[build-system]
requires = ["scikit-build-core>=0.10.0"]
build-backend = "scikit_build_core.build"

[project]
name = "neptune-mlir"
version = "0.1.0"
description = "HTile MLIR dialect plugin and Python translators."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["sympy>=1.14"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
neptune-triton = "neptune_mlir.translators.triton:main"
neptune-tilelang = "neptune_mlir.translators.tilelang:main"
neptune-cutile = "neptune_mlir.translators.cutile:main"

[tool.scikit-build]
cmake.version = ">=3.20"
wheel.packages = ["src/neptune_mlir"]
build-dir = "build/{wheel_tag}"

[tool.ruff]
line-length = 100
